       to better reflect the generality of the package and independence from SOAP.

  *    Synchronize code for creating RestrictedStringDefinition and so avoid an EnumValuesDef
       object.

  *    Use a different base class when defining new classes. This avoids the need to 
       load the SSOAP package before calling defineClasses.

0.7-0
 
  *    Compute default values for slots of new class from schema elements to handle
       sequences and optional values (i.e. count containing 0).

  *    Compute name for <any/> element as any, not NA.

0.6-1

  *    Support for recognizing types or elements in a schema come from XML schema types themselves,
       e.g. a <schema> element.


0.6-0

  *   Identify direct cross-references in type definitions in schema and avoid circularities
      in generation of R classes.

0.5-0  (Extensive updates and changes.)

  *   Compute namespaces in fromXML() to resolve namespace references.

  *   Added exportClassDefs() which generates R code that will define the classes and coerce methods
      for the classes we defined via defineClass() from the schema.

  *   Defined gYear and gYearMonth.

  *   Defined dateTime, time and date classes.
      Moved SOAPDateTime, etc. to SOAPDateTimeType for representing the type descriptions, not the instances.

  *   Generated functions now do not rely on their environment and so can be more readily serialized.
      The values are inserted into the function either when they are created or when they are serialized.

  *   Coercion functions for restricted types "compile" the computations at function creation time rather than
      performing some of the tests at run-time.

  *   Mechanism to identify types in a different SchemaTypes within a SchemaCollection 
      which have the same names and so would map to the same R name.  We adjust these 
      to have an Rname that maps to a different R class name so that they will be unique.
