@@ -56,6 +56,8 @@ export(createSOAPConverter)
 exportMethods(createSOAPConverter)
 
 
+exportClass(string)
+
 export(coerceListToS4)
 exportMethods(coerce)
 
