@@ -2,11 +2,11 @@
 # This creates code based on the SchemaType to convert an R object to an XML node.
 #
 setGeneric("toXML",
-           function(type, types, namespaceDefs = NULL, env = getNamespace("XML"))
+           function(value, type, types, namespaceDefs = NULL, env = getNamespace("XML"))
               standardGeneric("toXML"))
 
 setMethod("toXML", "ClassDefinition",
-           function(type, types, namespaceDefs = NULL) {
+           function(value, type, types, namespaceDefs = NULL) {
 
              f = function(obj, parent = NULL) {
                      attrs = character()
